--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "busboy": "^1.6.0",
     "cookie": "^0.6.0",
+    "dotenv": "^16.3.2",
     "websocket": "^1.0.34"
   },
   "devDependencies": {
