--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "optionalDependencies": {
     "@libsql/client": "^0.4.0-pre.7",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   }
 }
