env for testing

--- a/dev.env
+++ b/dev.env
@@ -1,1 +1,10 @@
 SECRET_KEY=meir456
+
+PG_HOST=postgres
+PG_PORT=5432
+PG_DATABASE=postgres
+PG_USER=postgres
+PG_PASSWORD=postgres
+
+TURSO_URL=http://libsql:5432
+TURSO_TOKEN=
