--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,15 +13,31 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    container: node:18.16.0
+
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      libsql:
+        image: ghcr.io/libsql/sqld:latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18.16.0
-          cache: npm
+      # - name: Setup node
+      #   uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 18.16.0
+      #     cache: npm
 
       - name: Install Wing
         run: npm i -g winglang
