--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -53,4 +53,4 @@ jobs:
         run: sleep 3 && curl http://localhost:8888/health
 
       - name: Test examples
-        run: ./test example_turso.main.w
+        run: ./test example_turso.main.w  && ./test example_neon.main.w
