--- a/dev.env
+++ b/dev.env
@@ -5,6 +5,7 @@ PG_PORT=5432
 PG_DATABASE=postgres
 PG_USER=postgres
 PG_PASSWORD=postgres
+PG_SSL=false
 
 TURSO_URL=http://localhost:8888
 TURSO_TOKEN=
