Fix GitHub actions

--- a/dev.env
+++ b/dev.env
@@ -1,10 +1,11 @@
 SECRET_KEY=meir456
 
-PG_HOST=postgres
+PG_HOST=localhost
 PG_PORT=5432
 PG_DATABASE=postgres
 PG_USER=postgres
 PG_PASSWORD=postgres
+PG_SSL=false
 
-TURSO_URL=http://libsql:8888
+TURSO_URL=http://localhost:8888
 TURSO_TOKEN=
